详情页面info区域完成

--- a/src/assets/styles/mixins.styl
+++ b/src/assets/styles/mixins.styl
@@ -2,3 +2,10 @@ ellipsis()
  overflow: hidden
  white-space: nowrap
  text-overflow: ellipsis
+
+rightArrow()
+  position: absolute
+  top: .2rem
+  right: .2rem
+  font-size: .3rem  
+  color: #9e9e9e
